--- a/index.html
+++ b/index.html
@@ -19,18 +19,29 @@
 
     <header>
 
-    <nav class="site-header sticky-top py-1">
-      <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2" href="#">
-          <img src="http://dask.pydata.org/en/latest/_images/dask_icon.svg">
-        </a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Product</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
+    <nav class="navbar navbar-expand-lg p py-1">
+      <a class="navbar-brand" href="#">
+        <img src="http://dask.pydata.org/en/latest/_images/dask_icon.svg">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="navbar-item"><a class="nav-link" href="#">Link 1</a></li>
+          <li class="navbar-item"><a class="nav-link" href="#">Link 2</a></li>
+          <li class="navbar-item"><a class="nav-link" href="#">Link 3</a></li>
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			  Dropdown link
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			  <a class="dropdown-item" href="#">Sublink 1</a>
+			  <a class="dropdown-item" href="#">Sublink 2</a>
+			  <a class="dropdown-item" href="#">Sublink 3</a>
+			</div>
+		  </li>
+        </ul>
       </div>
     </nav>
 
