--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
 
-    <nav class="navbar navbar-expand-lg text-light navbar-dark">
+    <nav class="navbar navbar-expand-lg text-light navbar-dark bs-dark">
       <a class="navbar-brand" href="#">
         <img src="http://dask.pydata.org/en/latest/_images/dask_icon.svg">
       </a>
@@ -28,19 +28,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="navbar-item"><a class="nav-link" href="#">Link 1</a></li>
-          <li class="navbar-item"><a class="nav-link" href="#">Link 2</a></li>
-          <li class="navbar-item"><a class="nav-link" href="#">Link 3</a></li>
-          <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Sublink 1</a>
-            <a class="dropdown-item" href="#">Sublink 2</a>
-            <a class="dropdown-item" href="#">Sublink 3</a>
-          </div>
-          </li>
+          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/why.html">Why Dask?</a></li>
+          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/install.html">Install</a></li>
+          <li class="navbar-item"><a class="nav-link" href="https://github.com/dask/dask-tutorial">Tutorial</a></li>
+          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/deploy.html">Deploy</a></li>
+          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/array.html">Arrays</a></li>
+          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/dataframe.html">Dataframes</a></li>
+          <li class="navbar-item"><a class="nav-link" href="https://dask-ml.readthedocs.org/en/latest/">Machine Learning</a></li>
+          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/delayed.html">Custom</a></li>
+          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/futures.html">Real Time</a></li>
         </ul>
       </div>
     </nav>
