--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/why.html">Why Dask?</a></li>
           <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/install.html">Install</a></li>
           <li class="navbar-item"><a class="nav-link" href="https://github.com/dask/dask-tutorial">Tutorial</a></li>
-          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/deploy.html">Deploy</a></li>
+          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/setup.html">Deploy</a></li>
           <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/array.html">Arrays</a></li>
           <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/dataframe.html">Dataframes</a></li>
           <li class="navbar-item"><a class="nav-link" href="https://dask-ml.readthedocs.org/en/latest/">Machine Learning</a></li>
