use non-outlined buttons for binder links

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p>Dask arrays scale Numpy, enabling multi-dimensional data analysis in earth science, advanced imaging, and machine learning algorithms</p>
             <p>
               <a class="btn btn-outline-secondary" href="https://dask.pydata.org/en/latest/array.html" role="button">Learn More &raquo;</a>
-              <a class="btn btn-outline-secondary" href="https://mybinder.org/v2/gh/dask/dask-examples/master?filepath=array.ipynb" role="button">Try Now &raquo;</a>
+              <a class="btn btn-secondary" href="https://mybinder.org/v2/gh/dask/dask-examples/master?filepath=array.ipynb" role="button">Try Now &raquo;</a>
             </p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
@@ -82,7 +82,7 @@
             <p>Dask dataframes scale Pandas, enabling applications in time series, business intelligence, and general data munging on big data.</p>
             <p>
               <a class="btn btn-outline-secondary" href="https://dask.pydata.org/en/latest/dataframe.html" role="button">Learn More &raquo;</a>
-              <a class="btn btn-outline-secondary" href="https://mybinder.org/v2/gh/dask/dask-examples/master?filepath=dataframe.ipynb" role="button">Try Now &raquo;</a>
+              <a class="btn btn-secondary" href="https://mybinder.org/v2/gh/dask/dask-examples/master?filepath=dataframe.ipynb" role="button">Try Now &raquo;</a>
             </p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
