add machine learning try now button

--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Rosenbrock_function.svg/300px-Rosenbrock_function.svg.png" height="200">
             <h2>Scikit-Learn</h2>
             <p>Dask-ML scales machine learning libraries like Scikit-Learn and XGBoost to enable scalable training and prediction on large models and large datasets</p>
-            <p><a class="btn btn-outline-secondary" href="https://dask-ml.readthedocs.org/en/latest/" role="button">Learn More &raquo;</a></p>
+            <p>
+              <a class="btn btn-outline-secondary" href="https://dask-ml.readthedocs.org/en/latest/" role="button">Learn More &raquo;</a>
+              <a class="btn btn-secondary" href="https://mybinder.org/v2/gh/dask/dask-examples/master?filepath=machine-learning.ipynb" role="button">Try Now &raquo;</a>
+            </p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
