--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="images/dask_icon_no_pad.svg">
 
     <title>Carousel Template for Bootstrap</title>
 
@@ -20,9 +20,7 @@
     <header>
 
     <nav class="navbar navbar-expand-lg text-light navbar-dark bs-dark">
-      <a class="navbar-brand" href="#">
-        <img src="http://dask.pydata.org/en/latest/_images/dask_icon.svg">
-      </a>
+      <img src="images/dask_icon_no_pad.svg" style="height: 32px;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,7 +41,7 @@
 
     <div class="hero position-relative overflow-hidden p-3 text-center text-light">
       <div class="col-md-5 p-lg-1 mx-auto my-5">
-        <img src="http://dask.pydata.org/en/latest/_images/dask_horizontal_white.svg">
+        <img src="images/dask_horizontal_white_no_pad.svg">
 		  <p class="lead font-weight-normal">
         Dask natively scales Python
       </p>
