--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="images/dask_icon_no_pad.svg">
+    <link rel="icon" href="_images/dask_icon_no_pad.svg">
 
     <title>Dask: Scalable analytics in Python</title>
 
@@ -14,37 +14,50 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
-
+    <link href="_static/main-page.css" rel="stylesheet">
 
   </head>
   <body>
 
     <header>
 
-    <nav class="navbar navbar-expand-lg text-light navbar-dark bs-dark">
-      <img src="images/dask_icon_no_pad.svg" style="height: 32px;">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand-lg">
+      <div class="navbar-brand">
+        <img src="_images/dask_icon_no_pad.svg" style="height: 2rem;">
+      </div>
+      <div class="navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/why.html">Why Dask?</a></li>
-          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/install.html">Install</a></li>
+          <li class="navbar-item"><a class="nav-link" href="why.html">Why Dask?</a></li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Documentation
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="docs.html">Overview</a>
+              <a class="dropdown-item" href="array.html">Arrays</a>
+              <a class="dropdown-item" href="dataframe.html">Dataframes</a>
+              <a class="dropdown-item" href="https://dask-ml.readthedocs.org/en/latest/">Machine Learning</a>
+              <a class="dropdown-item" href="delayed.html">Custom Applications</a>
+              <a class="dropdown-item" href="futures.html">Real Time</a>
+            </div>
+          </li>
+
+          <li class="navbar-item"><a class="nav-link" href="install.html">Install</a></li>
+          <li class="navbar-item"><a class="nav-link" href="setup.html">Deploy</a></li>
           <li class="navbar-item"><a class="nav-link" href="https://github.com/dask/dask-tutorial">Tutorial</a></li>
-          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/setup.html">Deploy</a></li>
-          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/array.html">Arrays</a></li>
-          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/dataframe.html">Dataframes</a></li>
-          <li class="navbar-item"><a class="nav-link" href="https://dask-ml.readthedocs.org/en/latest/">Machine Learning</a></li>
-          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/delayed.html">Custom</a></li>
-          <li class="navbar-item"><a class="nav-link" href="https://dask.pydata.org/en/latest/futures.html">Real Time</a></li>
         </ul>
       </div>
     </nav>
 
     <div class="hero position-relative overflow-hidden p-3 text-center text-light">
       <div class="col-md-5 p-lg-1 mx-auto my-5">
-        <img src="images/dask_horizontal_white_no_pad.svg">
+        <img src="_images/dask_horizontal_white_no_pad.svg" style="max-width: 100rem;">
 		  <p class="lead font-weight-normal">
         Dask natively scales Python
       </p>
@@ -52,7 +65,7 @@
         Dask provides advanced parallelism for analytics,
         enabling performance at scale for the tools you love
       </p>
-        <a class="btn btn-outline-warning" href="https://dask.pydata.org/en/latest">Learn More</a>
+        <a class="btn outline-dask btn-lg" href="docs.html">Learn More</a>
       </div>
       <div class="product-device box-shadow d-none d-md-block"></div>
       <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
@@ -70,26 +83,27 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img src="http://dask.pydata.org/en/latest/_images/dask-array-black-text.svg" height="200">
-            <h2>Numpy</h2>
+            <img src="_images/dask-array-black-text.svg" class="top-image">
+            <h2 class="mt-3">Numpy</h2>
             <p>Dask arrays scale Numpy, enabling multi-dimensional data analysis in earth science, advanced imaging, and machine learning algorithms</p>
             <p>
-              <a class="btn btn-outline-secondary" href="https://dask.pydata.org/en/latest/array.html" role="button">Learn More &raquo;</a>
+              <a class="btn btn-outline-secondary" href="array.html" role="button">Learn More &raquo;</a>
               <a class="btn btn-secondary" href="https://mybinder.org/v2/gh/dask/dask-examples/master?filepath=array.ipynb" role="button">Try Now &raquo;</a>
             </p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img src="http://dask.pydata.org/en/latest/_images/dask-dataframe.svg" height="200">
-            <h2>Pandas</h2>
+            <img src="_images/dask-dataframe.svg" class="top-image">
+            <h2 class="mt-3">Pandas</h2>
             <p>Dask dataframes scale Pandas, enabling applications in time series, business intelligence, and general data munging on big data.</p>
             <p>
-              <a class="btn btn-outline-secondary" href="https://dask.pydata.org/en/latest/dataframe.html" role="button">Learn More &raquo;</a>
+              <a class="btn btn-outline-secondary" href="dataframe.html" role="button">Learn More &raquo;</a>
               <a class="btn btn-secondary" href="https://mybinder.org/v2/gh/dask/dask-examples/master?filepath=dataframe.ipynb" role="button">Try Now &raquo;</a>
             </p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Rosenbrock_function.svg/300px-Rosenbrock_function.svg.png" height="200">
-            <h2>Scikit-Learn</h2>
+            <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Rosenbrock_function.svg/300px-Rosenbrock_function.svg.png" class="top-image"> -->
+            <img src="https://www.inria.fr/var/inria/storage/images/medias/saclay/actualites-images/saclay_scikit_learn_classification_398x195/841331-1-fre-FR/saclay_scikit_learn_classification_398x195.jpg" class="top-image">
+            <h2 class="mt-3">Scikit-Learn</h2>
             <p>Dask-ML scales machine learning libraries like Scikit-Learn and XGBoost to enable scalable training and prediction on large models and large datasets</p>
             <p>
               <a class="btn btn-outline-secondary" href="https://dask-ml.readthedocs.org/en/latest/" role="button">Learn More &raquo;</a>
@@ -105,22 +119,24 @@
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">Familiar for Python users <span class="text-muted"> and easy to get started</span></h2>
+            <h2 class="featurette-heading">Familiar for Python users</h2>
+            <h2 class="featurette-subheading"> and easy to get started</h2>
             <p class="lead">Dask uses existing Python APIs and data structures to make it easy to switch between Numpy, Pandas, Scikit-learn to their Dask-powered equivalents. </>
             <p class="lead"> You don't have to rewrite your code or retrain to scale up</p>
+            <a class="btn btn-secondary" href="api.html" role="button">Learn About Dask APIs &raquo;</a>
           </div>
 
           <div class="col-md-5 code-block">
-            <pre><code class="language-python"># Dataframes implement the Pandas API
-import dask.dataframe as dd
-df = dd.read_csv('s3://.../2018-*-*.csv')
-df.groupby(df.account_id).balance.sum()</code></pre>
-
             <pre><code class="language-python"># Arrays implement the Numpy API
 import dask.array as da
 x = da.random.random(size=(10000, 10000),
                      chunks=(1000, 1000))
 x + x.T - x.mean(axis=0)</code></pre>
+
+            <pre><code class="language-python"># Dataframes implement the Pandas API
+import dask.dataframe as dd
+df = dd.read_csv('s3://.../2018-*-*.csv')
+df.groupby(df.account_id).balance.sum()</code></pre>
 
             <pre><code class="language-python"># ML implements the Scikit-Learn API
 from dask_ml.linear_model \
@@ -134,12 +150,14 @@ lr.fit(train, test)</code></pre>
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Scale up to clusters <span class="text-muted"> or just use it on your laptop</span></h2>
+            <h2 class="featurette-heading">Scale up to clusters </h2>
+            <h2 class="featurette-subheading">or just use it on your laptop</h2>
             <p class="lead">Dask's schedulers scale to thousand-node clusters and its algorithms have been tested on some of the largest supercomputers in the world.</p>
 
             <p class="lead">But you don't need a massive cluster to get started.  Dask ships with schedulers designed for use on personal machines.  Many people use Dask today to scale computations on their laptop, using multiple cores for computation and their disk for excess storage.</p>
+            <a class="btn btn-secondary" href="scheduling.html" role="button">Learn About Dask Schedulers &raquo;</a>
           </div>
-          <div class="col-md-5 order-md-1" style="padding-top: 4rem;">
+          <div class="col-md-5 order-md-1" style="padding: 6rem 0rem;">
             <img src="https://github.com/dask/dask-org/raw/master/images/grid_search_schedule.gif"
                  width="100%">
           </div>
@@ -149,15 +167,21 @@ lr.fit(train, test)</code></pre>
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">Flexible and Extensible <span class="text-muted"> letting you parallelize your internal systems</span></h2>
+            <h2 class="featurette-heading">Customizable</h2>
+            <h2 class="featurette-subheading">Enabling you to parallelize internal systems</h2>
             <p class="lead">Not all computations fit into a big dataframe</p>
-            <p class="lead">Dask exposes lower-level APIs letting you build custom systems for custom applications.  This helps open source community leaders parallelize their own packages and helps business leaders scale custom business logic</p>
+            <p class="lead">Dask exposes lower-level APIs letting you build custom systems for in-house applications.  This helps open source leaders parallelize their own packages and helps business leaders scale custom business logic</p>
           </div>
 
           <div class="col-md-5 p-lg-1 mx-auto my-5">
             <img src="https://github.com/dask/dask-org/raw/master/images/credit-model.svg.png"
                  width="100%">
           </div>
+        </div>
+
+        <div class="text-center">
+          <a class="btn btn-outline-secondary btn-lg" href="docs.html" role="button">Learn More &raquo;</a>
+          <a class="btn btn-secondary btn-lg" href="https://mybinder.org/v2/gh/dask/dask-examples/master?filepath=array.ipynb" role="button">Try Now &raquo;</a>
         </div>
 
         <hr class="featurette-divider"></hr>
